--- a/gb/ncid282_3.md
+++ b/gb/ncid282_3.md
@@ -1,4 +1,8 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>社会万象</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/alzmt2820/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/alzmt2820/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/5/n11703099.md#1" target="_blank">台媒大师链北京插旗 学者：新型数位统战</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/5/n11703099.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/d616f32af30c66155e1e6d0b889cae4d-150x120.jpg" align ="left"></a>新网路内容平台“大师链”近日宣布将落地北京，创下台湾媒体在北京插旗的首例。淡江大学整合战略科技中心执行长苏紫云分析，大师链可能是中共新型态的“数位统战”，以虚拟货币“大师币”作为诱因，逐步限缩加入平台的文章、影音创作者的言论方向，甚至会在相关App中植入附加程式进行金流监控。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 11:24 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/5/n11701694.md#1" target="_blank">全球最适合居住及就业城市 台北重登冠军</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/5/n11701694.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/a352c5ee0e1838818d6848c55923d60a-150x120.jpg" align ="left"></a>根据旅外人士交流网站InterNations调查，台湾首都台北荣登2019年全球最适合居住和就业的城市排行榜榜首，睽违2年重回冠军宝座。其中，成为冠军最重要的原因是旅外人士认为“台北整体生活品质高”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 11:01 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/5/n11702627.md#1" target="_blank">高以翔猝逝 浙江卫视《追我吧》永久停播</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/5/n11702627.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912020718061487-150x120.jpg" align ="left"></a>今天（12月5日），有消息称，浙江卫视将永久停播《追我吧》节目。此前台湾艺人高以翔在录制此节目时不幸猝逝。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 7:09 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/5/n11701699.md#1" target="_blank">百度又曝丑闻 收钱推广假药 逾五千人受骗</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/5/n11701699.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/9e0d556bcec963c0587ddf34dbb3db62-600x400-150x120.jpg" align ="left"></a>由李彦宏掌舵的大陆搜索引擎百度丑闻不断。近日百度再卷入推广假药案，该案案发至今全国共有5000多人受骗。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 2:10 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/4/n11701327.md#1" target="_blank">海外华人注意 微信审查来加拿大了</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/4/n11701327.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/wechat-tencent-150x120.jpg" align ="left"></a>众所周知，中共一直通过各种网络平台控制中国民众的舆论。近来，这种控制事例在加拿大越来越多。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 7:43 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/4/n11701034.md#1" target="_blank">失联20年的北大博士后回应家人：别再找了</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/4/n11701034.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Untitled2-150x120.jpg" align ="left"></a>“失联20年”的北大博士后找到了！他现在美国，但却对家人说不要再通过媒体找他了，并说了7个字“清官难断家务事”，让外界匪夷所思。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 3:52 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/4/n11700590.md#1" target="_blank">揭中共介选十样态 台立委：急需反渗透法</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/4/n11700590.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/e6c5e7d526d4cd086308faa90dfc0516-150x120.jpg" align ="left"></a>2020总统选举进入倒数，中共介选问题备受各界关注。民进党立委李俊俋4日表示，从台湾首次民选总统起，中共便极力介入台湾选举，继1996年“武吓”、2000年“文攻”及2012年“以商逼政”后，中共介选手法推陈出新，包括骇客攻击、资讯操控等10种新样态，吁台湾人提高警觉，并盼尽速通过“反渗透法”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 11:55 PM							</td></tr>
@@ -16,7 +20,6 @@
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/2/n11693966.md#1" target="_blank">重庆在建桥体突断开倾侧 无人员伤亡</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/2/n11693966.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/bkn-20191202031517432-1202_00952_001_01b-150x120.jpg" align ="left"></a>12月1日晚，重庆一在建大桥突然断开倾斜，所幸没有造成人员伤亡。事故原因和后续处置工作尚未公布。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 10:54 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/1/n11693062.md#1" target="_blank">近六千人遭港警滥捕 游锡堃：台应守护下一代</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/1/n11693062.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/a9daa859e7f7f0a05b12d9201936a473-150x120.jpg" align ="left"></a>参加香港反送中运动的民众遭到港警滥捕，更有民众录下成批年轻人被押上“送中”火车的影片。对此，民进党不分区立委参选人游锡堃1日质疑，被捕的都是年轻人，他们会不会像法轮功学员一样被活摘器官？香港上一代人没能守护民主自由，台湾应用选票守护下一代。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 10:40 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/1/n11693220.md#1" target="_blank">分析：向心代表中共两大权贵 经营香港产业</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/1/n11693220.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/02a4054f7a6acdba5e3fbf76773950ba-150x120.jpg" align ="left"></a>香港中国创新投资公司负责人向心夫妇，因卷入共谍案遭带回调查，外界关心向心在中港台扮演的角色为何？中国问题专家江锋表示，由于香港可避开西方制裁进口军品，所以90年代初，掌握国防科工委的聂荣臻家族在香港布点，而批准经费的则是中共元帅叶剑英的女婿、国务院副总理邹家华，因此向心是代表叶、聂两大家族在香港进行买卖。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 9:35 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/11/30/n11692057.md#1" target="_blank">中共卫生部前官员再揭“河南血祸”真相</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/11/30/n11692057.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/image-3@1200x1200-150x120.jpg" align ="left"></a>12月1日又是一年一度的世界艾滋病日。一位中共卫生部前官员又一次发文披露河南血祸真相，并痛批先后包庇此事的多名中共领导人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月01日 7:50 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/5/n11701612.md#1" target="_blank">被爆扫楼式筹款 “水滴筹”陷信用危机</a><br></h3>中国重病众筹平台“水滴筹”近日被曝陷入信任危机，平台审查不严格，又没有相关法律对互联网筹款平台进行监管，民众担心捐款人被消费、被欺骗。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 11:56 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/5/n11701627.md#1" target="_blank">每日三退声明精选（2019/12/04）</a><br></h3>从近几个月香港的反送中运动，看出港府与中共的残暴，暴露出其流氓本性的一面。同时也让我看到美国政府和人民善良友好、尊重人权民主的普世价值的立国理念。我决定不与邪恶为伍，站在正义者一边，退出邪恶的团、队组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 10:36 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/4/n11699885.md#1" target="_blank">地陷埋3人后 广州又一处路面发生塌陷</a><br></h3>继12月1日，广州市大道北与禺东西路交界处发生地面塌陷后，12月3日，番禺南村镇番禺大道南往北方向一处人行道上也发生地面塌陷。不过，无人员伤亡。而此前的塌陷导致3人被埋，当局直接往坑中填水泥，受害人家属连日打横幅抗议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 5:05 PM							</td></tr>
@@ -26,8 +29,5 @@
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/3/n11696595.md#1" target="_blank">西安大妈趵突泉吐口水拍照 网民：没素质</a><br></h3>近日，在山东济南趵突泉景区，五位游玩的大妈，为了拍摄嘴巴喷水的一幕，集体向泉水吐口水，引来网民批评。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 11:11 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/3/n11696580.md#1" target="_blank">每日三退声明精选（2019/12/02）</a><br></h3>看了大纪元的《九评共产党》感到非常的震惊，我为党工作了一生而且大部分工作都是从事党务工作，却不知它如此的邪恶，多可悲呀！现在我醒悟了，我不能做邪教的一份子，现在我郑重声明：退出共产党、共青团和少先队等一切邪恶组织，清除兽的印记。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 10:46 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/2/n11694217.md#1" target="_blank">每日三退声明精选（2019/12/01）</a><br></h3>我没有修炼法轮大法，但看过一遍《转法轮》，知道法轮大法好，炼法轮功的人都是些好人，共产党迫害法轮功学员，打死、打残、打伤那么多好人，真是罪恶滔天。我早就不相信共产党了，它的本性就是假、恶、斗。我郑重声明：退出红小兵和少先队组织！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 12:14 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/1/n11692656.md#1" target="_blank">长沙男子长期熬夜致心衰竭 心脏功能仅剩35%</a><br></h3>湖南长沙市民李先生今年刚满31岁，平时热衷熬夜打游戏，经常凌晨两三点后才睡觉。最近，他感到胸口憋闷并咳嗽，于是前往医院就诊。经检查，李先生被确诊为心衰。医生表示，李先生的心脏功能只剩下35%左右，不到正常人的一半。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月01日 3:03 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/1/n11692564.md#1" target="_blank">疑酒店毛巾致感染 昆明老人睫毛长上百只螨虫</a><br></h3>近日，云南昆明75岁的老人陈凤（化名）由于眼睛出现干、痒、流泪的症状前往医院检查。医生发现，她的双眼睫毛内寄生了大量蠕形螨，粗略估算总数量达上百余只。医生判断，这可能是陈女士在出差过程中使用了酒店的毛巾，从而引起了眼部螨虫感染。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月01日 2:14 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/11/30/n11691222.md#1" target="_blank">广西一患者右肾取石 医生在左腰开刀</a><br></h3>本月中旬，广西北海人民医院发生一起医疗事故。患者刘先生接受全麻下右肾取石手术，没想到，主刀医生弄错了手术部位，却开到腰部左侧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 2:12 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid282_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid282.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid282_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid282_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid282_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid282_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid282_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid282_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid282_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid282_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid282_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/alzmt2820/djy/blob/master/gb/ncid282_3.md#1<br><a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid282_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/alzmt2820/djy/blob/master/gb/ncid282_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid282_3.htm">http://www.epochtimes.com/gb/ncid282_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
