--- a/gb/ncid283_4.md
+++ b/gb/ncid283_4.md
@@ -1,4 +1,12 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>中国经济</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/alzmt2820/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/alzmt2820/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/7/n11706720.md#1" target="_blank">大华银行：人民币明年继续走软至7.20</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/7/n11706720.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/ece9ce6653978d24b49f2322073548d8-150x120.jpg" align ="left"></a>大华银行日前发表报告表示，虽然美中第一阶段贸易谈判看起来有望达成，但因双方分歧仍大，再加上大陆经济增长疲弱，预计明年人民币兑美元会进一步走弱。该行最新预测人民币兑美元明年首季将转弱至7.08，下半年进一步跌至7.20。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 3:14 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/7/n11706577.md#1" target="_blank">为保壳 大陆亏损上市公司频卖房自救</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/7/n11706577.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/2-guangzhou-city-GettyImages-492909833-150x120.jpg" align ="left"></a>进入2019年四季度以来，大陆A股上市公司已经有接近20家上市公司披露卖房收入，或者拟出售房产来改善业绩、缓解资金紧张。这些公司这样做的目的就是扭亏、保壳，避免被摘牌下试。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 12:34 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11706470.md#1" target="_blank">中国汽车销售持续低迷 外资车企纷离场</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11706470.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1175991142-150x120.jpg" align ="left"></a>中国汽车市场连续17个月低迷，汽车企业的销量、利润持续下滑，业内人士预计明年将继续萎缩，目前在华投资的国际汽车品牌已经纷纷开辟其它市场。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 8:48 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11706324.md#1" target="_blank">库德洛：美中正在商讨农产品购买数量</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11706324.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1163406235-150x120.jpg" align ="left"></a>白宫经济顾问拉里·库德洛（Larry Kudlow）周五（12月6日）表示，美中两国正努力就北京购买美国农产品的数量达成协议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 4:26 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11706165.md#1" target="_blank">沪深两市成交量股价双跌 投资者损失惨重</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11706165.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/01/1601260306081664-150x120.jpg" align ="left"></a>中国经济前景黯淡，A股市场沪深两市的成交量和股价均呈跌势，上市公司业绩不佳，很多公司无法依靠主营业务达到业绩，投资者对A股市场缺乏信心。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 4:22 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11706002.md#1" target="_blank">【新闻看点】贸易谈判北京多变 川普：看情况</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11706002.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/GettyImages-1140447854-600x400-2-150x120.jpg" align ="left"></a>逼近12月15日的关税大限，中美双方变化的速度也加快了。中共国务院关税税则委员会今天（12月6日）公布 ，正在开展部分大豆、猪肉等商品的关税排除工作，示好的意味相当浓烈。美国总统川普昨天表示，美中贸易谈判进展“非常顺利”。对于是否在12月15日如期加征关税，“得看看情况”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 4:12 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11706070.md#1" target="_blank">库德洛：协议若无执行保证 川普会“走开”</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11706070.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1LX2NM-150x120.jpg" align ="left"></a>白宫首席经济顾问拉里·库德洛（Larry Kudlow）周五（12月6日）表示，美中两国已“接近”达成贸易协议，但如果川普（特朗普）政府没有在协议中得到他们想要的条款，美方已经准备好走开。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 1:29 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11704130.md#1" target="_blank">【十字路口】房企集体破产 中国债务风暴来袭</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11704130.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15ddce716daa9734_ttl7day74H_20191206-____-DJY-150x120.jpg" align ="left"></a>中国债务危机有多惊人？房企集体破产，会引爆中国金融海啸？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 10:40 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11705789.md#1" target="_blank">高盛：中国料下调2020经济增长至6%左右</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11705789.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/06/88ef826d58a48fe5d608abd35a426096-150x120.png" align ="left"></a>高盛集团（Goldman Sachs Group Inc.）分析认为，中共当局可能会将其2020年经济增长目标下调至“6％左右”，这将使决策者有余地应对增长放缓的趋势。此外，北京也可能会上调明年通货膨胀率的门槛。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 10:21 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11705623.md#1" target="_blank">中方将豁免部分美国大豆和猪肉进口关税</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11705623.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/a9932408ed3c6fbeeed2ab7a67e34473-150x120.jpg" align ="left"></a>中共官方周五（12月6日）公布，中方将豁免部分美国进口大豆和猪肉的报复性关税。彭博社称，此举可能意味着中美正接近达成一份更广泛的贸易协议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 8:44 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11705185.md#1" target="_blank">京二手房报价下跌 中介：杀价三四十万算正常</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11705185.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/1406082202201528-600x400-150x120.jpg" align ="left"></a>北京市二手房报价一路下跌，买房人获得了更大议价空间，有中介及购房者均表示，砍下三四十万来很正常。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 6:53 PM							</td></tr>
@@ -25,13 +33,5 @@
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/4/n11700818.md#1" target="_blank">中国知名学者估GDP增长不足5% 原文遭删</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/4/n11700818.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/08/130817200809941-150x120.jpg" align ="left"></a>针对备受关注的中国经济增长问题，知名中国经济学家高善文近日在演讲中预测不足5%，未来十年只能“保4争5”，这一数字相比国际机构的预测更低。但此演讲完整原文发布到网上不到一天，就被发现遭到删除。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 3:05 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/4/n11700822.md#1" target="_blank">英国首相：考虑把华为排除在5G网络之外</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/4/n11700822.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1186413236-150x120.jpg" align ="left"></a>在周三（12月4日）的北约峰会上，与会各国在电信安全问题上达成一致。英国首相鲍里斯·约翰逊（Boris Johnson）在记者会上表示，如果华为有可能危及英国国家安全，或危及到英国与其??他“五眼”国家的合作，英政府将把华为排除在5G网络建设之外。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 1:43 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/4/n11700587.md#1" target="_blank">北约峰会聚焦中共挑战和5G基础设施</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/4/n11700587.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1MS960-150x120.jpg" align ="left"></a>北大西洋公约（简称北约）成立70周年，各成员国周二（3日）和周三（4日）聚集在伦敦。据北约秘书长透露，周三的会谈各国元首聚焦的议题会包括武器控制、5G关键基础设施等。此外，还首次将中共构成的战略挑战纳入议题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 11:53 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/4/n11700511.md#1" target="_blank">川普：与中方贸易谈判进展非常顺利</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/4/n11700511.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1MS9K7-150x120.jpg" align ="left"></a>美国总统川普（特朗普）周三（12月4日）在伦敦表示，与中方的贸易谈判进展“非常顺利”，并认为会解决与美中贸易问题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 10:50 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/4/n11698988.md#1" target="_blank">中国闹猪肉荒 餐饮业感受供应量骤降压力</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/4/n11698988.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/000_1K107M-150x120.jpg" align ="left"></a>曹贤利（音译，Xianli Cao），这位位于中国东部的青岛市一家主营“排骨焖饭”的 饭店的老板，正面临着经营这家饭店十年来最大的考验。去年中国的猪肉价格飙升，不仅使他们饭店的成本翻了一番，而且现在，他甚至无法确定自己还能否买到足够的猪肉来烹制这道标志性的菜肴。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 2:15 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/4/n11699306.md#1" target="_blank">刘强东再卸任旗下公司高管 已辞去多个职务</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/4/n11699306.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1812042129432662-600x400-150x120.jpg" align ="left"></a>去年陷入丑闻的京东集团创建人刘强东继辞去中共全国政协委员后，12月4日刘强东再度卸任京东旗下公司高管。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 1:59 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/4/n11699098.md#1" target="_blank">违反制裁案 美法官取消华为首席律师辩护资格</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/4/n11699098.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/7fd193c314be8c1cdd4a142a7d547e70-150x120.jpg" align ="left"></a>周二（12月3日），美国一名法官剥夺了取消华为公司首席律师詹姆斯?科尔（James Cole）的辩护资格。纽约东区联邦法院在今年1月对华为提出银行欺诈和违反制裁等指控。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 11:29 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/4/n11698833.md#1" target="_blank">北大方正20亿债券违约 清华紫光被波及</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/4/n11698833.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1312310333481528-600x400-150x120.jpg" align ="left"></a>中国企业的债券违约正在加速，并且已经蔓延至大学控股企业。北大方正发生20亿债券违约，并波及清华紫光出现债券价格大跌，市场预计明年中国将有更多企业发生债务违约。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 10:35 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/3/n11698476.md#1" target="_blank">高管全部辞职  暴风集团面临多项风险</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/3/n11698476.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/one_20191203081726482-1-150x120.jpg" align ="left"></a>暴风集团的实际控制人7月份被抓之后，集团高管已经全部辞职，目前该集团主要业务无法运作、拖欠员工薪水，并且面临净资产为负、被暂停上市、无法偿债等多项风险。该集团股价持续暴跌，涉及股东7万户。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 7:50 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/3/n11698655.md#1" target="_blank">彭斯透露川普在贸易谈判中使用的两个杠杆</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/3/n11698655.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/000_1H321V-150x120.jpg" align ="left"></a>美国副总统迈克·彭斯（Mike Pence）周二（12月3日）表示，随着美国总统川普（特朗普）继续推动与中方，以及法国和其它欧洲盟国的贸易协议，美国市场准入（或强劲经济）和关税手段是川普的两个杠杆。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 7:02 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/4/n11700492.md#1" target="_blank">川普北约谈5G 再强调华为存在安全隐患</a><br></h3>在周三（12月4日）的北约峰会上，北约各国达成一致，要是用安全可靠的5G设备。美国总统川普（特朗普）更是直接指出，跟中共军方有关联的华为公司存在安全隐患。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 10:59 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid283_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid283.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid283_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid283_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid283_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid283_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid283_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid283_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid283_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid283_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid283_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/alzmt2820/djy/blob/master/gb/ncid283_4.md#1<br><a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid283_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/alzmt2820/djy/blob/master/gb/ncid283_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid283_4.htm">http://www.epochtimes.com/gb/ncid283_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
