--- a/gb/ncid282_4.md
+++ b/gb/ncid282_4.md
@@ -20,6 +20,8 @@
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/11/25/n11678915.md#1" target="_blank">王立强的间谍老板 向心及龚青离台时被约谈</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/11/25/n11678915.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1bb7b1fc92f949c620fb1c740b178c11-150x120.jpg" align ="left"></a>香港上市公司“中国创新投资(01217.HK)”执行董事、主席兼行政总裁向心和替任董事龚青，因被投诚澳洲的中共特工王立强指为中共从事间谍活动，被调查局桃园市调查处发出通知书，要求就新闻报道事宜配合调查，两人已聘请台湾律师提供协助。
 
 自称是中共特工的王立强，10月向澳洲反间谍机关投诚，澳洲媒体23日刊出其访谈。王立强说，他以中央军事委员会联合参谋部创建的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 10:16 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/1/n11692656.md#1" target="_blank">长沙男子长期熬夜致心衰竭 心脏功能仅剩35%</a><br></h3>湖南长沙市民李先生今年刚满31岁，平时热衷熬夜打游戏，经常凌晨两三点后才睡觉。最近，他感到胸口憋闷并咳嗽，于是前往医院就诊。经检查，李先生被确诊为心衰。医生表示，李先生的心脏功能只剩下35%左右，不到正常人的一半。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月01日 3:03 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/1/n11692564.md#1" target="_blank">疑酒店毛巾致感染 昆明老人睫毛长上百只螨虫</a><br></h3>近日，云南昆明75岁的老人陈凤（化名）由于眼睛出现干、痒、流泪的症状前往医院检查。医生发现，她的双眼睫毛内寄生了大量蠕形螨，粗略估算总数量达上百余只。医生判断，这可能是陈女士在出差过程中使用了酒店的毛巾，从而引起了眼部螨虫感染。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月01日 2:14 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/11/30/n11691222.md#1" target="_blank">广西一患者右肾取石 医生在左腰开刀</a><br></h3>本月中旬，广西北海人民医院发生一起医疗事故。患者刘先生接受全麻下右肾取石手术，没想到，主刀医生弄错了手术部位，却开到腰部左侧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 2:12 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/11/29/n11688779.md#1" target="_blank">每日三退声明精选（2019/11/28）</a><br></h3>本人在二十多岁时入党，因年轻无知，对共产党的面目认识不清。随着年龄渐长，尤其出国以后，获得更多资讯，了解到该党对西藏人、新疆人、香港人以及部分大陆人的所作所为，对人权的侵害怵目惊心。我为自己是该党成员感到羞耻。我声明，自2019年11月28日起，本人自愿退出共产党，不再是该党成员。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 11:29 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/11/28/n11686830.md#1" target="_blank">班级装饮水机 河南一中学收50元“喝水费”</a><br></h3>学校的班级里装饮水机，本是件方便学生喝水的好事。然而近日，河南省鹿邑县唐集乡中学被曝向学生收取“喝水费”。据了解，收费从今年上半学期就已开始，到了今年秋季开学则变成强制性收费，每位学生每学期被收取50元。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 5:23 PM							</td></tr>
@@ -29,11 +31,5 @@
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/11/25/n11678984.md#1" target="_blank">妈妈辅导女儿功课发脾气 外公23年前早料到</a><br></h3>“不写作业母慈子孝，一写作业鸡飞狗跳”，这是大陆许多辅导孩子功课的家长真实的写照。近日，上海一位妈妈被不认真做功课的女儿气到抓狂，连连咆哮，没想到却乐坏了她的老父亲和老母亲。原来23年前，她的父亲给她辅导功课时就是这样，当时他甚至还气愤的写下了一封家书。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 3:28 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/11/25/n11678963.md#1" target="_blank">6厘米钻头打穿新房楼板 开封女屋主被吓呆</a><br></h3>装修新房本是高兴的事，可河南开封市尉氏县居民郑女士在装地板时却被自己的新房吓了一跳。近日，她反映，交房时她发现其中一卧室楼板中间部分凹陷，且房间地面有多处明显裂痕；在铺装木地板打地板龙骨时，楼板竟被6厘米的钻头打穿。开发商对此声称，这并不影响居住，若要退房，郑女士须还清按揭。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 3:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/11/25/n11678880.md#1" target="_blank">南昌初一学生校服收费2300元 家长难接受</a><br></h3>近日，江西南昌县的舒先生反映，孩子在该县豫章师院附属学校读初一，学校要求家长交钱统一买校服，费用实在太高，令家长难以接受。据了解，该校订购的校服共13件，费用总计2300元。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 2:25 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/11/25/n11678229.md#1" target="_blank">每日三退声明精选（2019/11/24）</a><br></h3>我几乎天天看大纪元、新唐人，使我更加看清了共产党的邪恶本质，并在力所能及条件下，揭露中共，弘扬自由、民主、法治的普世价值观，为中国民族的觉醒和未来，奋笔疾书，尽量感染身边的每一个人，家人、亲戚、朋友、同学，特别是今年以来的中美贸易战和香港民众反送中运动，为中国的未来，尽自己一份绵薄之力。在此，我庄严声明，退出中国共产党党籍，永不反悔。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 10:14 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/11/24/n11676572.md#1" target="_blank">每日三退声明精选（2019/11/23）</a><br></h3>打土豪分田地，害死那么多地主，是地主错了么？
-资本主义工商业改造，害死那么多资本家，是资本家错了么？
-反右斗争，害死那么多爱国人士，是爱国人士错了么？
-把归国华侨当特务，害死那么多，是爱国华侨错了么？
-三年大饥荒，饿死一亿多农民“官方统计是掩盖罪恶的数字”，仅重灾区的河南，安徽两省就饿死七千多万人，四川省饿死一千多万人。。。。。。是勤劳善良的农民错了.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月24日 11:12 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid282_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid282.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid282_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid282_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid282_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid282_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid282_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid282_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid282_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid282_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid282_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/alzmt2820/djy/blob/master/gb/ncid282_4.md#1<br><a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid282_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/alzmt2820/djy/blob/master/gb/ncid282_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid282_4.htm">http://www.epochtimes.com/gb/ncid282_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
