--- a/gb/news2007_5.md
+++ b/gb/news2007_5.md
@@ -16,8 +16,7 @@
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/7/5/5/n1700065.md#1" target="_blank">漫谈中国舞：唐朝崇仙舞蹈《云韶乐》舞</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/7/5/5/n1700065.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/201910232-150x120.jpg" align ="left"></a>唐朝文宗时，下诏让太常卿冯定制作《云韶法曲》。《新唐书·礼乐志》亦记载，这个舞蹈由三百人表演，有宫廷宴席时才表演。唐《乐府杂录》记载，“乐分堂上、堂下。登歌四人，在堂下坐”，除了表演的三百人外，还有五个穿着绣花的衣服的舞童，各自手执著金莲花在前面导引，意即“执金莲花如仙家行道者”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 8:10 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/3/10/18/n396131.md#1" target="_blank">古代诗人的修炼故事：陈陶</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/3/10/18/n396131.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2003/10/457898773f18046294f77674e96f0afe-150x120.png" align ="left"></a>陈陶（约812年—约885年？）字嵩伯，晚唐著名诗人。其诗“无一点尘气。于晚唐诸人中，最得平淡”[1]，《陇西行》为其传世名篇：“誓扫匈奴不顾身，五千貂锦丧胡尘。可伶无定河边骨，犹是春闺梦里人。”[2]大中时，游学长安，后隐居南昌西山。有诗集十卷，已散佚，后人辑有《陈嵩伯诗集》一卷。《全唐诗》存录其诗二卷[3]。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 5:54 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/9/1/21/n2404596.md#1" target="_blank">救人一方  老天爷给父亲增寿二十年</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/9/1/21/n2404596.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1412091255022483-150x120.jpg" align ="left"></a>看相的说，父亲一生救人无数，积了大德，老天爷又给增寿二十年，能活到八十四岁高寿，福荫子孙后代等等……......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 5:41 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/11/30/n11691292.md#1" target="_blank">纪实散文：一夜惊梦（12）</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/11/30/n11691292.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/tu1-shutterstock_177027626-3-150x120.jpg" align ="left"></a>老周哥的故事
-一天，家中来了一男一女，一对精彩人物。男的面色黑瘦，个子高高，是回族阿訇之子。女的活泼爽利，笑语如珠，却是我汉家女子。幼承庭训，凡有客来，奉茶端水，即便退下，对先生之事向少开口。行走江湖，偶尔或露峥嵘，家门之内，一向谨守妇德。但这对异族夫妻吸引了我的注意力，端杯清茶，也坐沙发上聆听。原来男子姓周，俩人从.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 2:53 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/1/n11693393.md#1" target="_blank">五律：荒凉</a><br></h3> 繁华冬日碎， 未世道衰无。 水落沙洲出， 风干乱石枯。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 10:11 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/2/n11695158.md#1" target="_blank">唐浩：将变</a><br></h3>赤匪妖术罄   良知破迷明   秋风红潮落   春旭两岸晴......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 12:15 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/1/n11693392.md#1" target="_blank">诗歌：遥望</a><br></h3>冷寂寒冬里， 长河独远巡。 风吹枯叶尽， 水结薄冰新。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 12:05 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/1/n11693686.md#1" target="_blank">诗歌：无题</a><br></h3>萧萧西风过北疆 瑟瑟寒枝落尽芳 千载沧桑浑一梦 夜阑卧听雨打窗......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 7:05 PM			</td></tr>
