--- a/gb/news392_4.md
+++ b/gb/news392_4.md
@@ -21,7 +21,12 @@
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/7/n11706677.md#1" target="_blank">骆克仁：一个男演员之死</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/7/n11706677.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/PO_X8303-1-150x120.jpg" align ="left"></a>录制大陆节目《追我吧》意外猝逝的男演员高以翔遗体已运回台湾，停灵于台北第一殡仪馆。除了惋惜、感叹，一个男演员之死，还能让我们重新审视些什么？
 
 旅美多年，鲜少看华人电视节目，但这回我真想“见识”一下，究竟是什么样的“都市夜景追跑竞技秀”能让参演者体力不支？又是什么原因让工作团队毫无危机意识，错失救人的黄金时间，让一.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 11:54 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/7/n11706648.md#1" target="_blank">白马：陆媒的衰弱和新唐人、大纪元的强盛</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/7/n11706648.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/photo-600x400-1-150x120.jpg" align ="left"></a>日前，中国大陆的鸡西新闻传媒集团由于一年不发工资，集团联合政府部门动员新闻工作者辞职。200多媒体人在单位门口、街边打出讨薪横幅……......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 11:44 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/9/n11710059.md#1" target="_blank">理悟：中共归宿</a><br></h3>亥猪闹猪瘟，党国头发昏。
+子鼠未值年，鼠疫先进门。
+港选涂地败，特工反惊魂。
+美推双法案，港疆利万民。
+噩耗不断溜，祸事紧相跟。
+四顾无生机，一路进荒坟。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 2:07 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/9/n11709979.md#1" target="_blank">吐为快：共匪在香港秀道德</a><br></h3>特务乱金港，黑警暗珠光
 烟弹弥党恨，水炮射共狂
 傀府养一娥，万家夜凄怆
