--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -27,7 +27,6 @@
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11706297.md#1" target="_blank">姐姐因病离世 原来真是回天界享福去了</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11706297.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/04/123-150x120.jpg" align ="left"></a>我姐姐1971年出生的。从小她就体弱，后来就得了白血病。我爸着急啊，他特别相信算命的，就找了一高人给姐看相，那人一见我姐就说，这女孩在天上是侍奉菩萨的小童，做错事给打下来了。她不属于我们凡间，下来就是要吃苦赎罪的，时间到了还得回天界啊。我爸问他，“什么时间回去啊？”那高人说，她在凡间也就待22年，然后就回天界享福了。他.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 2:08 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11706278.md#1" target="_blank">揭开白蛇传的爱情面纱：法海原为除妖高僧</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11706278.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Scenic_Attractions_of_West_Lake_30-150x120.jpg" align ="left"></a>建于东晋的镇江泽心寺，唐时始称金山寺，后成为临济宗传承道场，被奉为佛教禅宗经典名寺。金山寺素以“高僧降蛇”为其独特的寺庙文化而名闻遐迩。提到“高僧降蛇”，就不得不说到金山寺的“开山裴祖”——高僧法海，亦即后世诸多版本白蛇传中法海和尚的原型。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 1:47 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11718913.md#1" target="_blank">作文选登：面对未来，我需具备的能力</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11718913.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/414629_medium-150x120.jpg" align ="left"></a>当我们迈入人生的不同阶段时，都会遇到各式各样的挑战，我们应该具备多元的能力，让未来的道路走得明亮、灿烂。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 1:03 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/15/n11724134.md#1" target="_blank">五律：诗</a><br></h3>不能当饭吃，何以作钱花。 子美愁寻舍，渊明苦养家。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 12:06 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/15/n11724147.md#1" target="_blank">七律：飞雪迎“神韵”</a><br></h3> 忽若春风花瓣雨， 纷纷白雪舞芳菲。 素笺款款千年语， 粉蝶翩翩亿万飞。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 9:46 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/15/n11724144.md#1" target="_blank">调笑令．神传文化之光</a><br></h3>诚信， 诚信， 贸易往来兴顺。 神传文化遵循， 厚德先民善仁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 9:42 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/15/n11723574.md#1" target="_blank">诗歌：偶感</a><br></h3> 庭中松柏翠 窗外雪纷飞 洁白衬绿意 暖室望寒梅 一别中原二十载......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 2:47 PM			</td></tr>
@@ -35,5 +34,6 @@
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11718633.md#1" target="_blank">五律：清晨</a><br></h3> 遥夜划鸡鸣，犬从三五声。 云岚熏晓色，草露衬时荣。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 12:12 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11718664.md#1" target="_blank">台湾古典诗：台北考棚</a><br></h3> 腾云浩气火车头，带动鹃城学术遒， 此地布金怀故老，他山攻玉萃名流；......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 11:12 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11718727.md#1" target="_blank">歌词：这里，那里</a><br></h3>善在眼睛里， 海在胸怀里， 山在脊梁里， 天在心空里。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 11:10 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11713632.md#1" target="_blank">五绝：善语慈心</a><br></h3>法指瑶台路，迷红万丈渊。 心明离桎梏，神舵度流年。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 9:12 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/news2007.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news2007_2.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/alzmt2820/djy/blob/master/gb/news2007.md#1<br><a href="https://github.com/alzmt2820/djy/blob/master/gb/news2007.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/alzmt2820/djy/blob/master/gb/news2007.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2007.htm">http://www.epochtimes.com/gb/news2007.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
