--- a/gb/nsc413_4.md
+++ b/gb/nsc413_4.md
@@ -24,7 +24,7 @@
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11718861.md#1" target="_blank">习访澳门打造金融中心？专家：香港无可替代</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11718861.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/04/130425115806100311-150x120.jpg" align ="left"></a>路透社日前独家报导，中国国家主席习近平下星期将访问澳门，宣布一系列的新政策，旨在把这个依靠博彩业经济的城市打造成一个金融中心。然而，专家认为，香港作为外资进入中国内地最好桥梁的角色，无可替代。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 4:59 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11719114.md#1" target="_blank">内外交困之际 中共突然晋升近百名将军</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11719114.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/01/1401220857431944-150x120.jpg" align ="left"></a>在面临重重危机之际，中共当局突然在4天内晋升了96名将军，这引起外界的关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 4:11 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11717070.md#1" target="_blank">《归途》入围多国电影节 各大洲专业人士赞赏</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11717070.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/587fb43d2e73ea1366ee82d10bb1e95e-150x120.jpg" align ="left"></a>2019岁末之际，新世纪影视基地出品电影《归途》接连入围各类国际电影节，影片传递的讯息和制作水准受到不同文化背景评委们的认同和肯定。自《归途》公映以来，获得的电影节奖项及入围决赛的电影节20余个，遍及全球四大洲。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 3:59 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11718893.md#1" target="_blank">传美将取消12月关税 协议执行机制浮出水面</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11718893.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1DR3U4-600x400-1-150x120.jpg" align ="left"></a>美国媒体报导，传川普政府周四决定是否取消12月对华关税议程，以及削减已加征的关税，有意思的是，同时浮现的还有中美贸易谈判中最难的执行机制部分。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 3:56 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11720210.md#1" target="_blank">经常接触生禽无防护 湖南菜场小贩染布病</a><br></h3>继中国农科院兰州兽医研究所至少96人被感染布鲁氏菌病（布病）、哈尔滨兽医研究所13名学生感染布病后，湖南永州一菜场小贩也被发现感染布病。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 4:24 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11720497.md#1" target="_blank">山东一男子持刀伤人 致2死1伤</a><br></h3>12月11日晚山东济宁发生一起持刀伤人案件，3名受害者中2人身亡，另外1人受伤，嫌疑人逃离现场后畏罪自杀，被送往医院抢救。经初查，嫌疑人与其中1名受害者有感情纠纷。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 3:42 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11719940.md#1" target="_blank">中共经济会议结束 七常委出席不见王岐山</a><br></h3>为期3天的中共中央经济工作会议在北京举行，该会议承认经济下行压力加大。当天，习近平、李克强等中共七常委出席会议，但独缺中共国家副主席王岐山。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 12:11 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11719825.md#1" target="_blank">每日三退声明精选（2019/12/12）</a><br></h3>自从今年年初我出国时偶然观看了由神韵艺术团表演的多姿多彩的中华传统舞蹈节目后，我的心态有了大幅度的转变，如果这样的中华文化传承是共产党口中的邪教，那么共产党自己又能是什么呢？后来我回国后又翻墙阅读了《九评共产党》的文章，字字句句都深刻揭示了共产党本质，给了我极大的震撼，让我深刻的意识到共产党对我们真正中国传统文化的残害是多么的严重，我现在身在邪党阵营中，只能.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 10:32 AM							</td></tr>
